@@ -1,3 +1,4 @@
+Build a Fraction: Pictures: Fixed: Piece should move down in the target cell, it is too high now that the piece size buttons appear beneath.
 Build a Fraction: Pictures: Use the same colors in each level as the icon
 Build a Fraction: Pictures: Use the specified color in each level
 Build a Fraction: Added a reset all button to the level selection page
